--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "postinstall": "husky install"
   },
   "lint-staged": {
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "husky": "^5.0.1",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "standard": "^16.0.3"
   }
