husky config moved to package json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "git add"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
