--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "standard": "^16.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.10.15"
   }
 }
