--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "lint-staged": {
     "*.js": [
-      "standard --fix",
-      "git add"
+      "standard"
     ]
   },
   "husky": {
     "hooks": {
       "pre-commit": "npx lint-staged"
     }
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
   },
   "author": "",
   "license": "ISC",
