--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watchAll",
+    "test:staged": "jest",
     "postinstall": "husky install"
   },
   "lint-staged": {
     "*.js": [
-      "standard"
+      "standard --fix",
+      "npm run test:staged",
+      "git add"
     ]
   },
   "husky": {
