--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clean-node-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Construindo uma API Rest um NodeJS utilizando TDD, Clean Architecture e Design Patterns.",
   "main": "index.js",
   "scripts": {
     "test": "jest --silent --colors --noStackTrace --passWithNoTests",
@@ -29,12 +29,15 @@
       "jest"
     ]
   },
-  "author": "",
+  "author": "Gabriel Rios",
   "license": "ISC",
   "devDependencies": {
     "husky": "^5.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "standard": "^16.0.3"
+  },
+  "dependencies": {
+    "validator": "^13.1.17"
   }
 }
