--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/main/index.js",
     "test": "jest --colors --noStackTrace --passWithNoTests",
     "test:unit": "npm test -- --watchAll -c jest-unit-config.js",
-    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:integration": "npm test -- --watchAll -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "postinstall": "husky install"
@@ -37,7 +37,8 @@
     "husky": "^5.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
